docker et chap02

--- a/chap02.ipynb
+++ b/chap02.ipynb
@@ -38,10 +38,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "setwd(\"/mooc\")"
+    "setwd(\"/work\")"
    ]
   },
   {
